# deepin-topbar

./: .clog.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.38689a1  Makefile  README.md  Widget.cpp  Widget.h  XcbMisc.cpp  XcbMisc.h  com.deepin.dde.topbar.gschema.xml  com.deepin.dde.topbar.polkit.service  com.deepin.dde.topbar.service  com.deepin.deepin.Topbar.service  dde-topbar-autostart.desktop  deepin-topbar-autostart.desktop  deepin-topbar.desktop  deepin-topbar.pro  deepintopbar.pro  install.sh  kirigaya@10.0.12.170  main.cpp  timewidget.cpp  timewidget.h  topbar.cpp  topbar.h  topbar.pro
dbus/: com.deepin.daemon.Audio.xml  com.deepin.dde.Wallpaper.xml  com_deepin_dde_wallpaper.cpp  com_deepin_dde_wallpaper.h  dbus.pri  dbusdock.cpp  dbusdock.h  dbusdockentry.h  dbusmediaplayer2.cpp  dbusmediaplayer2.h  dbusnetwork.h  dbussink.cpp  dbussink.h  org.mpris.MediaPlayer2.xml
debian/: changelog  control  debhelper-build-stamp  deepin-topbar.substvars  files  rules
frame/: frame.cpp  frame.h  frame.pro  frameshadow.cpp  frameshadow.h  main.cpp  maindbusservice.cpp  maindbusservice.h  mainframe.cpp  mainframe.h  mainpanel.cpp  mainpanel.h  moc_frame.cpp  moc_frameshadow.cpp  moc_item.cpp  moc_itempopupwindow.cpp  moc_mainframe.cpp  moc_mainpanel.cpp  moc_pluginloader.cpp  moc_pluginscontroller.cpp  moc_pluginsitem.cpp  moc_pluginsitemcontroller.cpp  moc_stretchitem.cpp  moc_switchitem.cpp  settings.cpp  settings.json  settingsdialog.cpp  settingsdialog.h  settingswindow.cpp  settingswindow.h  topbar.cpp  topbar.h
frame/controller/: pluginloader.cpp  pluginloader.h  pluginscontroller.cpp  pluginscontroller.h  pluginsitemcontroller.cpp  pluginsitemcontroller.h
frame/dbus/: dbusmenu.cpp  dbusmenu.h  dbusmenumanager.cpp  (+1 more)
interfaces/: PopupWindowInterface.h  constants.h  interfaces.pri  pluginproxyinterface.h  pluginsiteminterface.h  popupwindowinterface.h
modules/: modules.pri
plugins/: plugins.pro
readme/: english.md  中文.md
src/: CMakeLists.txt
src/dbus/: com.deepin.daemon.Audio.Sink.xml  com.deepin.daemon.Audio.SinkInput.xml  dbusaccount.h  dbusinterface.cpp  dbusinterface.h
src/frame/: dbusservice.cpp  dbusservice.h  deepin-topbar.qrc  main.cpp  mainframe.cpp  mainframe.h  mainpanel.cpp  mainpanel.h  settings.cpp  settings.h  settings.json
src/frame/item/: contentmodule.cpp  contentmodule.h  item.h  pluginsitem.cpp  pluginsitem.h  stretchitem.cpp  stretchitem.h
src/frame/utils/: event_monitor.cpp  event_monitor.h  global.cpp  global.h  themeappicon.cpp  themeappicon.h
src/interfaces/: moduleiteminterface.h  pluginproxyinterface.h  pluginsiteminterface.h
src/modules/account/: accountplugin.h  accountwidget.cpp  accountwidget.h
src/modules/indicator/: indicatorplugin.cpp  indicatorplugin.h  indicatorworker.cpp  indicatorworker.h
src/modules/indicator/View/: appstoreaction.h  entry.cpp  indicatorwidget.cpp  indicatorwidget.h  positionwidget.cpp  positionwidget.h  systemlogo.cpp  systemlogo.h
src/modules/indicator/theme/light/: IndicatorWidget.theme  PositionWidget.theme
src/modules/network/: network.qrc  networkcontrolpanel.h  networkplugin.cpp  networkplugin.h
src/modules/network/item/applet/: accesspoint.h  refreshaction.cpp  refreshaction.h
src/modules/notify/: notify.qrc  notifydelegate.cpp  notifydelegate.h  notifyitem.cpp  notifyitem.h  notifymodel.cpp  notifymodel.h  notifyplugin.cpp  notifyplugin.h  notifypopupwidget.cpp  notifypopupwidget.h  notifyview.cpp  notifyview.h  notifywidget.cpp  notifywidget.h
src/modules/power/: power.qrc  powermodel.cpp  powermodel.h  powerplugin.cpp  powerplugin.h  powerpopupwidget.cpp  powerpopupwidget.h  powerwidget.cpp  powerwidget.h  powerwidgetaction.cpp
src/modules/search/: searchbutton.cpp  searchbutton.h  searchmodule.cpp  searchmodule.h
src/modules/sound/: sinkinputwidget.cpp  sinkinputwidget.h  soundapplet.cpp  sounditem.cpp  sounditem.h  soundplugin.cpp  soundplugin.h
src/modules/sound/componments/: mediacontrol.cpp  volumeslider.cpp
src/modules/system-tray/: snitraywidget.cpp  snitraywidget.h  systemtrayplugin.cpp  systemtrayplugin.h  tipswidget.cpp  tipswidget.h  xwindowtraywidget.h
src/modules/system-tray/dbus/sni/: dbusstructures.cpp  statusnotifieritem_interface.cpp
src/modules/system-tray/sni/: statusnotifierwatcher.cpp  statusnotifierwatcher.h
src/modules/systeminfo/: systeminfomodel.cpp  systeminfomodel.h  systeminfoplugin.h  systeminfothread.cpp  systeminfowidget.cpp  systeminfowidget.h
src/modules/systeminfo/DBus/: org.freedesktop.NetworkManager.Device.xml  org_freedesktop_networkmanager_device.cpp
src/modules/systeminfo/resources/: systeminfo.qrc
src/modules/timewidget/: datetimeplugin.cpp  datetimeplugin.h  datetimewidget.h
src/modules/wallpaper/: wallpapermodel.cpp  wallpaperplugin.cpp  wallpaperplugin.h  wallpapersettings.cpp  wallpaperwidget.cpp  wallpaperwidget.h  wallpaperworker.cpp  wallpaperworker.h
src/widgets/: dactionbutton.cpp  dactionlabel.cpp  dwidgetaction.h  fontlabel.cpp  itempopupwindow.cpp  itempopupwindow.h  settingsgroup.cpp  settingsgroup.h  settingshead.cpp  settingshead.h  settingsheaderitem.cpp  settingsheaderitem.h  settingsitem.cpp  settingsitem.h  switchbutton.h  switchitem.h  switchwidget.cpp  switchwidget.h  titlevalueitem.cpp  titlevalueitem.h  translucentframe.cpp  translucentframe.h  widgets.qrc
src/widgets/labels/: largelabel.h  normallabel.h  smalllabel.h  tipslabel.h
src/widgets/themes/common/: common.qss
src/widgets/themes/dark/: dark.qss
translations/: deepin-topbar.ts  deepin-topbar_en_US.ts  deepin-topbar_es_ES.ts  deepin-topbar_fr_FR.ts  deepin-topbar_id_ID.ts  deepin-topbar_it_IT.ts  deepin-topbar_ja_JP.ts  deepin-topbar_pl_PL.ts  deepin-topbar_pt_BR.ts  deepin-topbar_ru_RU.ts  deepin-topbar_tr_TR.ts  deepin-topbar_zh_CN.ts
widgets/: dactionbutton.cpp  dactionbutton.h  dactionlabel.cpp  dactionlabel.h  dwidgetaction.cpp  dwidgetaction.h  fontlabel.cpp  fontlabel.h  itempopupwindow.cpp  itempopupwindow.h  switchbutton.cpp  switchitem.cpp  switchitem.h  widgets.pri  widgets.qrc
(+308 files in other folders)
